[metadata]
name = cairo_math_64x61
version = attr: cairo_math_64x61.__version__
description = Fixed point 64.61 math library for Cairo / Starknet
author = Unstoppable Games, Inc.
author_email = maintainers@openzeppelin.org
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/influenceth/cairo-math-64x61
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    cairo_math_64x61 = contracts

install_requires =
    importlib-metadata>=4.0

[options.package_data]
cairo_math_64x61 = "*.cairo"